objects/SLCA2__CA_test__c.object
<CustomObject>
    <fields>
        <fullName>SLCA2__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLCA2__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLCA2__Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLCA2__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLCA2__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>CA_test</label>
    <nameField>
        <label>CA_test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>